--- a/includes/sidebar.html
+++ b/includes/sidebar.html
@@ -1,41 +1,41 @@
     <section class="sidebar">
       <ul class="sidebar__list">
-        <li class="sidebar__item sidebar__item--active sidebar__item--create">
-          <a href="" class="sidebar__link">
+        <li class="sidebar__item sidebar__item--create @@create-item-class">
+          <a href="index.html" class="sidebar__link">
             <svg aria-hidden="true" role="img" width="30" height="30"> <use xlink:href="img/svg-sprite/svg-sprite.svg#icon-create"></use>
             </svg>
             СОЗДАТЬ
           </a>
         </li>
-        <li class="sidebar__item sidebar__item--choose">
-          <a href="" class="sidebar__link">
+        <li class="sidebar__item sidebar__item--choose @@choose-item-class">
+          <a href="choose.html" class="sidebar__link">
             <svg aria-hidden="true" role="img" width="30" height="30"> <use xlink:href="img/svg-sprite/svg-sprite.svg#icon-choose"></use>
             </svg>
             ВЫБРАТЬ
           </a>
         </li>
-        <li class="sidebar__item sidebar__item--invoice">
-          <a href="" class="sidebar__link">
+        <li class="sidebar__item sidebar__item--invoice @@invoice-item-class">
+          <a href="invoices.html" class="sidebar__link">
             <svg aria-hidden="true" role="img" width="30" height="30"> <use xlink:href="img/svg-sprite/svg-sprite.svg#icon-invoice"></use>
             </svg>
             СЧЕТА
           </a>
         </li>
-        <li class="sidebar__item sidebar__item--rest">
-          <a href="" class="sidebar__link">
+        <li class="sidebar__item sidebar__item--rest @@rest-item-class">
+          <a href="rests.html" class="sidebar__link">
             <svg aria-hidden="true" role="img" width="30" height="30"> <use xlink:href="img/svg-sprite/svg-sprite.svg#icon-rest"></use>
             </svg>
             ОСТАТКИ
           </a>
         </li>
-        <li class="sidebar__item sidebar__item--clients">
+        <li class="sidebar__item sidebar__item--clients @@clients-item-class">
           <a href="" class="sidebar__link">
             <svg aria-hidden="true" role="img" width="30" height="30"> <use xlink:href="img/svg-sprite/svg-sprite.svg#icon-clients"></use>
             </svg>
             КЛИЕНТЫ
           </a>
         </li>
-        <li class="sidebar__item sidebar__item--warehouse">
+        <li class="sidebar__item sidebar__item--warehouse @@warehouse-item-class">
           <a href="" class="sidebar__link">
             <svg aria-hidden="true" role="img" width="30" height="30"> <use xlink:href="img/svg-sprite/svg-sprite.svg#icon-warehouse"></use>
             </svg>
