--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -31,7 +31,7 @@
 
   &:active,
   &.active {
-    background-image: none;
+//    background-image: none;
     box-shadow: inset 0 1px 4px rgba(125, 125, 125, 0.75);;
   }
 }
