--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,6 +1,6 @@
 $html-size-base: 10px;
 $font-size: 1.4rem;
-$line-height: 1.4rem;
+$line-height: 1.2;
 $font-family: "OpenSans", Arial, sans-serif;
 
 
