--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,7 +1,6 @@
 html {
   font-size: $html-size-base;
   font-family: $font-family;
-  font-size: $font-size;
   line-height: $line-height;
   display: flex;
   height: 100vh;
@@ -25,6 +24,7 @@ body {
   display: flex;
   height: 100vh;
   overflow: hidden;
+  background-color: #edf0f5;
  }
 
  .content {
