--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/breadcrumbs.scss";
 @import "blocks/select.scss";
 @import "blocks/table.scss";
+@import "blocks/modal.scss";
 
 
 
