Формы, кроме проверки заполнения полей

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -6,4 +6,9 @@
       Version <span class="footer__version-num">1.1</span>
     </span>
   </footer>
-  <script src="js/modals.js"></script>
+  @@include('../modal-warehouse-create.html')
+  @@include('../modal-reserve.html')
+  <script src="js-min/modals.js"></script>
+  <script src="js-min/jquery.weekpicker.js"></script>
+  <script src="js-min/fields-calendar.js"></script>
+
