--- a/includes/head.html
+++ b/includes/head.html
@@ -4,4 +4,7 @@
   <meta name="robots" content="noindex">
   <title>Document</title>
   <link rel="stylesheet" href="style.min.css">
+  <link rel="stylesheet" href="node_modules/jquery-ui/themes/base/all.css">
+  <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src="node_modules/jquery-ui/ui/widgets/datepicker.js"></script>
 </head>
