--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/select.scss";
 @import "blocks/table.scss";
 @import "blocks/modal.scss";
+@import "blocks/field-calendar.scss";
 
 
 
