--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -65,9 +65,15 @@ fieldset[disabled] a.btn {
 }
 
 .btn--modal-submit {
-  background-color: #b2ad81;
   margin-left: auto;
   margin-right: auto;
+  color: #ffffff;
+  &:disabled {
+    background-color: #545454;
+  }
+  &:enabled {
+    background-color: #b2ad81;
+  }
 }
 
 .btn--load {
@@ -77,3 +83,4 @@ fieldset[disabled] a.btn {
   background-repeat: no-repeat;
   background-position: center right 13px;
 }
+
